[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/scene_compositor/ui/controls/OpenFileControl.gd" type="Script" id=1]
[ext_resource path="res://addons/scene_compositor/assets/icons/Folder.svg" type="Texture" id=2]
[ext_resource path="res://addons/scene_compositor/core/base/BaseControl.tscn" type="PackedScene" id=3]






[node name="OpenFileControl" instance=ExtResource( 3 )]
script = ExtResource( 1 )
value = null

[node name="FilePath" type="LineEdit" parent="." index="0"]
margin_right = 164.0
margin_bottom = 45.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Button" type="TextureButton" parent="." index="1"]
margin_left = 172.0
margin_right = 202.0
margin_bottom = 45.0
rect_min_size = Vector2( 30, 30 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="FileDialog" type="FileDialog" parent="." index="2"]
margin_left = 96.0
margin_right = 596.0
margin_bottom = 300.0
rect_min_size = Vector2( 500, 300 )
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
[connection signal="focus_exited" from="FilePath" to="." method="_on_FilePath_focus_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
